[package]
name = "non-standard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoincore-rpc = "0.18.0"
config = { version = "0.13.4", default-features = false, features = ["toml"] }
csv = "1.3.0"
